<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="SpeakableTextPresentCheck">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UselessParent">

                <EditText
                    android:id="@+id/edit_key_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    tools:ignore="LabelFor,SpeakableTextPresentCheck,VisualLintTextFieldSize" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eq"
                    android:textSize="26sp" />

                <EditText
                    android:id="@+id/edit_value_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    tools:ignore="LabelFor,SpeakableTextPresentCheck,VisualLintTextFieldSize" />
            </LinearLayout>
        </RelativeLayout>

        <Button
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_add" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save" />

    <Spinner
        android:id="@+id/variable_list"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:minHeight="48dp"
        tools:ignore="NestedScrolling" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/msg" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/view_config"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_config" />

        <Button
            android:id="@+id/btn_rm_config"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end"
            android:text="@string/btn_rm_config"
            tools:ignore="RelativeOverlap" />

        <Button
            android:id="@+id/btn_kill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="50dp"
            android:text="@string/btn_kill"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>
</LinearLayout>
